fixed the project title alignemnt in home

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -523,7 +523,6 @@
   font-size: 1.1rem;
   font-weight: 700;
   color: var(--text-primary);
-  margin-bottom: 0.5rem !important;
   margin-right: 0.5rem !important;
   line-height: 1.3;
   width: 90%;
